--- a/package.json
+++ b/package.json
@@ -27,5 +27,13 @@
     "react-native-icons": "^0.5.1",
     "react-native-button": "^1.2.1",
     "react-native-star-rating": "^1.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/djchie/react-native-make-review-modal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/djchie/react-native-make-review-modal/issues"
+  },
+  "homepage": "https://github.com/djchie/react-native-make-review-modal"
 }
